--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <script src="https://apis.google.com/js/api.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>Fun Twitch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
